# atlas-ai

./: .env.example  .gitignore  README.md  docker-compose.yml
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 001_initial.py  2e733f087366_add_user_settings_table.py  e5d4e4929685_add_sessions_and_messages_tables.py  f1a2b3c4d5e6_add_user_timezone.py
backend/app/: main.py
backend/app/agent/: graph.py  llm.py  prompts.py  state.py  stt.py  tools.py  tts.py
backend/app/agent/tools/: __init__.py  calendar.py  contacts.py  credentials.py  errors.py  gmail.py  maps.py  tasks.py
backend/app/api/v1/: auth.py  sessions.py  user_settings.py  websocket.py
backend/app/core/: celery.py  config.py  database.py  ratelimit.py  security.py
backend/app/models/: __init__.py  oauth.py  session.py  settings.py  user.py
backend/app/tasks/: agent.py
docs/: architecture.md  build_plan.md  todos.md
frontend/: index.html  package-lock.json  package.json  vercel.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/: ChatMessage.tsx  LoginButton.tsx  ToolCard.tsx  UserBadge.tsx  VoiceBar.tsx
frontend/src/components/cards/: CalendarEventCard.tsx  EmailDraftCard.tsx  RouteDistanceCard.tsx  TaskItemCard.tsx
frontend/src/components/layout/: Header.tsx  Layout.tsx  (+1 more)
frontend/src/hooks/: useAudioRecorder.ts  useAuth.ts  useSessions.ts  useSettings.ts  useTTS.ts  useTheme.ts  useWebSocket.ts
frontend/src/lib/: api.ts
frontend/src/pages/: ChatPage.tsx  LandingPage.tsx  SettingsPage.tsx
