[project]
name = "atlas-ai-backend"
version = "0.1.0"
description = "Atlas AI — Voice-enabled Google Workspace assistant"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic-settings>=2.6.0",
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.30.0",
    "alembic>=1.14.0",
    "python-jose[cryptography]>=3.3.0",
    "cryptography>=44.0.0",
    "httpx>=0.28.0",
    "sarvamai==0.1.28",
    "langchain-google-genai>=2.0.0",
    "langgraph>=1.2.0",
    "langgraph-checkpoint-postgres>=3.1.0",
    "celery[redis]>=5.4.0",
    "redis>=5.0.0",
]
